--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
 </head>
 <body>
 
+   <header class="switch-colors-type">
+      <nav>
+         <ul class="colors-type">
+            <li class="normal-section color">
+               Color <span class="color-hover flipper">Flipper</span>
+            </li>
+            <li class="hex-section color">
+               Simple <span class="color-hover hex">Hex</span>
+            </li>
+         </ul>
+      </nav>
+   </header>
+
    <main class="page-content">
 
       <div class="bg-color-area">
-         <h1 class="main-title">Background Color : <span class="color-input">red</span></h1>
+         <h1 class="main-title">Background Color : <span class="color-input">select mode</span></h1>
       </div>
 
-      <button class="color-changer">CLICK  ME</button>
+      <button class="color-changer hide">CLICK  ME</button>
 
    </main>
 
